[package]
authors = ["Graham Shapiro <virtualgraham@gmail.com>"]
name = "dagoba-rust"
version = "0.0.0"
edition = "2018"
license = "MIT"
description= "An in-memory graph database"
repository = "https://github.com/virtualgraham/dagoba-rust"
keywords = ["database", "graphs"]
categories = ["database"]
readme = "README.md"

[dependencies]
maplit = "0.1.4"    